controller/service: update http
