# docs/swagger.yaml
@@ -175,6 +175,109 @@ definitions:
         example: 0
         type: integer
     type: object
+  dto.ServiceUpdateHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单ip
+        type: string
+      clientip_flow_limit:
+        description: "\b客户端ip限流"
+        minimum: 0
+        type: integer
+      header_transfor:
+        description: header转换
+        type: string
+      id:
+        description: 服务ID
+        example: 62
+        minimum: 1
+        type: integer
+      ip_list:
+        description: ip列表
+        example: 127.0.0.1:80
+        type: string
+      need_https:
+        description: 支持https
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        maximum: 1
+        minimum: 0
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        maximum: 1
+        minimum: 0
+        type: integer
+      open_auth:
+        description: 关键词
+        maximum: 1
+        minimum: 0
+        type: integer
+      round_type:
+        description: 轮询方式
+        maximum: 3
+        minimum: 0
+        type: integer
+      rule:
+        description: 域名或者前缀
+        example: /test_http_service_indb
+        type: string
+      rule_type:
+        description: 接入类型
+        maximum: 1
+        minimum: 0
+        type: integer
+      service_desc:
+        description: 服务描述
+        example: test_http_service_indb
+        maxLength: 255
+        minLength: 1
+        type: string
+      service_flow_limit:
+        description: 服务端限流
+        minimum: 0
+        type: integer
+      service_name:
+        description: 服务名
+        example: test_http_service_indb
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时, 单位s
+        minimum: 0
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时, 单位s
+        minimum: 0
+        type: integer
+      upstream_idle_timeout:
+        description: 链接最大空闲时间, 单位s
+        minimum: 0
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲链接数
+        minimum: 0
+        type: integer
+      url_rewrite:
+        description: url重写功能
+        type: string
+      weight_list:
+        description: "\b权重列表"
+        example: "50"
+        type: string
+      white_list:
+        description: 白名单ip
+        type: string
+    required:
+    - id
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
+    type: object
   middleware.Response:
     properties:
       data: {}
@@ -375,6 +478,34 @@ paths:
                   $ref: '#/definitions/dto.ServiceListOutput'
               type: object
       summary: 服务列表
+      tags:
+      - 服务管理
+  /service/service_update_http:
+    post:
+      consumes:
+      - application/json
+      description: 修改HTTP服务
+      operationId: /service/service_update_http
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceUpdateHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 修改HTTP服务
       tags:
       - 服务管理
 swagger: "2.0"
